--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ img {
   background-color: #ACA39A;
   color: white;
   text-align: center;
-  font-size: 40px;
+  font-size: 1.5rem;
   line-height: 100px;   
   justify-content: space-between;
 }
